# Phronesis-CSO

./: .env.example  .gitignore  README.md  package.json  pnpm-lock.yaml  projectbrief.md  publish_cited.py  pyproject.toml
docs/: ENVIRONMENT.md  PROJECT.md  loom-script-3min.md  loom-slides.md
frontend/: app.js  app.jsx  build.py  index.html  server.py  x402.py
frontend/site/: index.html  schematic.html
frontend/tests/: test_hitl.py  test_sse_endpoint.py
skills/celltype-specificity-profiler/: SKILL.md  profiler.py
skills/celltype-specificity-profiler/tests/: test_profiler.py
skills/cellxgene-fetch/: SKILL.md  cellxgene_fetch.py
skills/clinical-trial-finder/: SKILL.md  clinical_trial_finder.py
skills/dataset-projection/: README.md  facts.py  mcp_server.py  run_decision_live.py  run_live.py  to_cso.py
skills/dataset-projection/extractors/: literature_claims.py  run_decision.py
skills/lit-synthesizer/: SKILL.md  lit_synthesizer.py
skills/malignant-expression-profiler/: SKILL.md  malignant_expression_profiler.py
skills/openfda-safety/: SKILL.md  openfda_safety.py
skills/opentargets-association-evidence/: SKILL.md  opentargets_association_evidence.py
skills/opentargets-target-factors/: SKILL.md  opentargets_target_factors.py
skills/phronesis-cso/: SKILL.md  cso.py  harness.py  kg.json  kg.py  neo4j_reason.py  primekg_enrich.py  prometheux_reason.py  resolver.py  runners.py  schemas.py  settings.py  tracing.py
skills/phronesis-cso/demo_data/b7h3/: step_04_offtarget_safety.json
skills/phronesis-cso/tests/: test_cso.py  test_harness.py  test_kg_cache.py
skills/tcga-somatic-profiler/: SKILL.md  tcga_somatic_profiler.py
tests/: test_prometheux_reason.py
workflows/: b7h3_adc_nomination.md
